--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jogo da Memória</title>
-  <link rel="stylesheet" href="style_memoria.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
   <div class="tabuleiro"></div>
   <button id="startButton">Duelar</button>
 
-  <script src="js_memoria.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
